--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "watch": "nodemon index.js",
     "start": "node index.js"
   },
@@ -16,5 +16,8 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.11",
     "nodemon": "^1.18.10"
+  },
+  "devDependencies": {
+    "jest": "^24.1.0"
   }
 }
