--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose",
-    "watch": "nodemon index.js",
-    "start": "node index.js"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "watch": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js"
   },
   "author": "",
   "license": "MIT",
@@ -19,6 +19,8 @@
     "nodemon": "^1.18.10"
   },
   "devDependencies": {
-    "jest": "^24.1.0"
+    "cross-env": "^5.2.0",
+    "jest": "^24.1.0",
+    "supertest": "^3.4.2"
   }
 }
